--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -67,7 +67,7 @@ jobs:
           ISSUE_TITLE="🚨 configlet sync --test found unsynced tests"
           ISSUE_DATA=$(gh issue list --search "is:issue is:open in:title \"${ISSUE_TITLE}\" repo:${{ github.repository }}" --json number,title --jq '.[0]')
 
-          if [ -z "$ISSUE_DATA" ]; then
+          if [[ -z "$ISSUE_DATA" ]]; then
             printf "No open issue found with title: '%s'. A new one will be created.\n" "${ISSUE_TITLE}"
             echo "issue_number=" >> $GITHUB_OUTPUT
           else
