--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -70,7 +70,7 @@ jobs:
 
           if [[ -z "$ISSUE_DATA" ]]; then
             printf "No open issue found with title: '%s'. A new one will be created.\n" "${ISSUE_TITLE}"
-            echo "issue_number=" >> $GITHUB_OUTPUT
+            echo "issue_number=" >> "$GITHUB_OUTPUT"
           else
             ISSUE_NUMBER=$(jq -r '.number' <<< "$ISSUE_DATA")
             echo "Found existing issue number: $ISSUE_NUMBER for title: '$ISSUE_TITLE'"
