--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -21,7 +21,7 @@ jobs:
         run: ./bin/configlet sync --docs --metadata --filepaths -u -y
 
       - name: Create pull request if changes
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "🤖 Auto-sync docs, metadata, and filepaths"
