--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -3,11 +3,11 @@ name: Configlet Auto Sync
 on:
   workflow_call:
     inputs:
-      run_docs:
+      sync_docs:
         required: false
         type: boolean
         default: true
-      run_tests:
+      sync_tests:
         required: false
         type: boolean
         default: true
@@ -15,7 +15,7 @@ on:
 jobs:
   sync-docs-metadata:
     timeout-minutes: 10
-    if: ${{ inputs.run_docs }}
+    if: ${{ inputs.sync_docs }}
     runs-on: ubuntu-24.04
 
     steps:
@@ -48,7 +48,7 @@ jobs:
 
   check-test-sync:
     timeout-minutes: 10
-    if: ${{ inputs.run_tests }}
+    if: ${{ inputs.sync_tests }}
     runs-on: ubuntu-24.04
 
     steps:
