--- a/.github/workflows/docker-build-push-image.yml
+++ b/.github/workflows/docker-build-push-image.yml
@@ -76,8 +76,18 @@ jobs:
           fi
           echo "result=${dockerfile_exists}" >> $GITHUB_OUTPUT
       
+      - name: Set up Docker
+        uses: docker/setup-docker-action@efe9e3891a4f7307e689f2100b33a155b900a608
+        with:
+          daemon-config: |
+            {
+              "features": {
+                "containerd-snapshotter": true
+              }
+            }
+
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+        uses: docker/setup-qemu-action@c7c53464625b32c7a7e944ae62b3e17d2b600130
 
       - name: Set up Docker Buildx
         if: steps.dockerfile-exists.outputs.result == 'true'
@@ -104,8 +114,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          load: false
-          push: false
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: ${{ secrets.DOCKER_BUILD_ARGS }}
